--- a/etc/시계열.md
+++ b/etc/시계열.md
@@ -1,10 +1,10 @@
-# 📘 시계열 머신러닝·딥러닝 모델링 정리 
+# 시계열 머신러닝·딥러닝 모델링 정리 
 
-## ✅ 1. 시계열 데이터란?
+## 1. 시계열 데이터란?
 - 시간 순서대로 정렬된 데이터 (예: 주식 가격, 날씨, 환율 등)
 - 예: 2023-01-01 → 2023-01-02 → 2023-01-03 ...
 
-## ✅ 2. 모델링 기본 흐름
+## 2. 모델링 기본 흐름
 1. **데이터 준비**: 시계열 데이터 로드  
 2. **정상성 확인**: 패턴이 일정한지 확인  
 3. **전처리**: 로그 변환, 차분 등  
@@ -15,7 +15,7 @@
 
 ---
 
-## ✅ 3. 기본 개념 정리
+## 3. 기본 개념 정리
 
 ### ● 정상성 (Stationarity)
 - 평균, 분산이 일정한 데이터
@@ -35,7 +35,7 @@ log_return = log(today_price / yesterday_price)
 
 ---
 
-## ✅ 4. 주요 모델
+## 4. 주요 모델
 
 | 모델 | 특징 | 설명 |
 |------|------|------|
@@ -49,7 +49,7 @@ log_return = log(today_price / yesterday_price)
 
 ---
 
-## ✅ 5. 평가 지표
+## 5. 평가 지표
 
 | 지표 | 계산법 | 의미 |
 |------|--------|------|
@@ -59,7 +59,7 @@ log_return = log(today_price / yesterday_price)
 
 ---
 
-## ✅ 6. PyTorch 기반 모델 구성
+## 6. PyTorch 기반 모델 구성
 
 ### ● 입력 구조 이해
 - 입력: `[배치크기, 시퀀스길이, 입력특성수]`  
@@ -88,7 +88,7 @@ self.fc = nn.Linear(hidden_size, output_size)
 
 ---
 
-## ✅ 7. RNN 구조 초간단 설명
+## 7. RNN 구조 초간단 설명
 
 - RNN은 **순서가 있는 데이터**(시계열)를 다루는 데 특화
 - 예측할 때, 이전 입력과 **은닉 상태(hidden state)**를 같이 사용함
@@ -104,7 +104,7 @@ out, hidden = rnn(x, hidden)
 
 ---
 
-## ✅ 8. LSTM 구조 초간단 설명
+## 8. LSTM 구조 초간단 설명
 
 - LSTM은 **기억을 오래 유지할 수 있는 RNN**
 - 내부에 3개의 게이트 사용:
@@ -114,7 +114,7 @@ out, hidden = rnn(x, hidden)
 
 ---
 
-## ✅ 9. 실제 모델 학습 흐름 예시
+## 9. 실제 모델 학습 흐름 예시
 
 ```python
 for epoch in range(epochs):
@@ -129,7 +129,7 @@ for epoch in range(epochs):
 
 ---
 
-## ✅ 10. 예측 결과 복원 방법
+## 10. 예측 결과 복원 방법
 
 > 로그 수익률로 학습했을 경우, 원래 **종가로 복원**하려면 다음과 같이 함:
 
@@ -142,7 +142,7 @@ for log_return in predicted_log_returns:
 
 ---
 
-## ✅ 11. ACF / PACF 간단 설명
+## 11. ACF / PACF 간단 설명
 
 - **ACF**: 자기 자신과의 상관관계 (전체)
 - **PACF**: 직접적인 상관관계만 고려
@@ -155,7 +155,7 @@ for log_return in predicted_log_returns:
 
 ---
 
-## ✅ 12. 추천 학습 순서
+## 12. 추천 학습 순서
 
 1. 시계열 개념 이해 (정상성, 차분, 로그)  
 2. ARIMA 구조 이해  
@@ -166,7 +166,7 @@ for log_return in predicted_log_returns:
 
 ---
 
-## ✅ 13. 용어 정리
+## 13. 용어 정리
 
 | 용어 | 설명 |
 |------|------|
