--- a/etc/시계열.md
+++ b/etc/시계열.md
@@ -17,17 +17,97 @@
 
 ## 3. 기본 개념 정리
 
-### ● 정상성 (Stationarity)
+### 정상성 (Stationarity)
 - 평균, 분산이 일정한 데이터
-- 예측 모델에 꼭 필요!
+- 예측 모델에 꼭 필요
 
-### ● 로그 수익률 (Log Return)
+#### 시계열 모델에서 정상성을 검토해야 하는 모델
+정상성 (Stationarity) 은 시계열 데이터에서 시간에 따른 평균과 분산이 일정해야 하는 성질을 말한다. 
+
+정상성 검정과 이를 위한 변환(차분 등)은 주로 전통적인 시계열 모델에서 중요한 과정이다. 
+
+즉, ARIMA 외에도 몇몇 다른 모델에서도 정상성 검정을 해야 할 필요가 있다.
+
+ARIMA 외에 정상성을 고려해야 하는 모델들:
+
+- ARIMA (AutoRegressive Integrated Moving Average):
+
+정상성을 반드시 확보해야 한다. 
+
+데이터가 정상적이지 않으면 차분(differencing)이나 변환을 통해 정상성을 확보한 뒤 모델을 적용한다.
+
+- SARIMA (Seasonal ARIMA):
+
+ARIMA의 계절성 버전인 SARIMA 모델 역시 정상성을 요구합니다. 계절성 변동이 있는 데이터를 처리할 때 주로 사용된다. 
+
+역시 정상성 검정 후 차분 등을 적용해야 한다.
+
+- Exponential Smoothing (ETS):
+
+Exponential Smoothing 계열 모델은 정상성 여부를 반드시 확인해야 하며 정상적이지 않은 데이터를 변환하여 적용하는 경우가 많다.
+
+Holt-Winters 모델은 추세와 계절성을 고려하여 예측을 진행한다. 
+
+정상성 요구가 있을 수 있지만 다소 유연하게 적용 가능하기도 한다.
+
+- ARCH/GARCH:
+
+ARCH (Autoregressive Conditional Heteroskedasticity)나 GARCH (Generalized ARCH) 모델은 
+
+변동성 모델로 금융 시계열에서 자주 사용된다. 
+
+이 모델들도 정상성 검토가 필요하며 특히 이동 평균이나 자기 회귀 요소가 포함되어 있기 때문에 시계열이 정상성을 가질 때 더 잘 동작한다.
+
+<br><br>
+
+정상성 검정을 해야 하는 이유:
+
+이 모델들은 자기회귀(AR) 및 이동평균(MA)를 기반으로 하여 과거 데이터에서 패턴을 추출하려 하기 때문에 
+
+시계열 데이터가 정상성을 갖추지 않으면 예측 성능이 저하될 수 있다.
+
+<br><br>
+
+- 정상성 검정이 필요 없는 모델들 (딥러닝 모델)
+  
+딥러닝 모델들은 정상성 검정에 대한 요구가 없다. 
+
+딥러닝 모델들은 시계열 데이터의 패턴을 학습하면서 비정상적인 시계열 데이터에서도 좋은 예측 성능을 발휘할 수 있다. 
+
+예를 들어 Transformer, LSTM, GRU와 같은 딥러닝 모델들은 정상성 검정 없이도 데이터를 그대로 입력받아 시간적 패턴을 학습할 수 있다.
+
+- LSTM (Long Short-Term Memory):
+
+LSTM은 시계열 데이터에서 장기 의존성을 학습하는 모델로 정상성 검증이 필요 없다.
+
+- GRU (Gated Recurrent Unit):
+
+GRU도 시계열 데이터의 패턴을 학습할 수 있으며 정상성을 고려할 필요가 없다.
+
+- Transformer:
+
+Transformer 모델은 주의(attention) 메커니즘을 사용하여 데이터를 처리하는 딥러닝 모델로 시계열 데이터의 순서와 관계성을 학습한다. 
+
+이 역시 정상성 검증이 필요하지 않다.
+
+이러한 딥러닝 모델들은 학습 과정에서 시계열의 패턴을 자동으로 인식하고 예측을 수행할 수 있기 때문에 
+
+전통적인 모델들과 달리 데이터가 정상성을 만족하지 않아도 잘 작동한다.
+
+<br><br>
+
+정상성 검정이 필요한 모델: ARIMA, SARIMA, Exponential Smoothing, ARCH/GARCH 등 전통적인 시계열 모델.
+
+정상성 검정이 필요 없는 모델: LSTM, GRU, Transformer 등 딥러닝 시계열 모델
+
+
+### 로그 수익률 (Log Return)
 ```python
 log_return = log(today_price / yesterday_price)
 ```
 - 시계열 데이터를 안정적으로 만들어 줌
 
-### ● 차분 (Differencing)
+### 차분 (Differencing)
 ```python
 차분 = 오늘 값 - 어제 값
 ```
@@ -61,11 +141,11 @@ log_return = log(today_price / yesterday_price)
 
 ## 6. PyTorch 기반 모델 구성
 
-### ● 입력 구조 이해
+### 입력 구조 이해
 - 입력: `[배치크기, 시퀀스길이, 입력특성수]`  
   예: `[64, 7, 1]` → 7일간 1개 값씩 64개 데이터
 
-### ● MLP
+### MLP
 ```python
 self.model = nn.Sequential(
     nn.Linear(input_size, hidden_size),
@@ -74,13 +154,13 @@ self.model = nn.Sequential(
 )
 ```
 
-### ● RNN
+### RNN
 ```python
 self.rnn = nn.RNN(input_size, hidden_size, batch_first=True)
 self.fc = nn.Linear(hidden_size, output_size)
 ```
 
-### ● LSTM
+### LSTM
 ```python
 self.lstm = nn.LSTM(input_size, hidden_size, batch_first=True)
 self.fc = nn.Linear(hidden_size, output_size)
@@ -91,7 +171,8 @@ self.fc = nn.Linear(hidden_size, output_size)
 ## 7. RNN 구조 초간단 설명
 
 - RNN은 **순서가 있는 데이터**(시계열)를 다루는 데 특화
-- 예측할 때, 이전 입력과 **은닉 상태(hidden state)**를 같이 사용함
+  
+- 예측할 때, 이전 입력과 **은닉 상태(hidden state)** 를 같이 사용함
 
 ```python
 out, hidden = rnn(x, hidden)
@@ -107,6 +188,7 @@ out, hidden = rnn(x, hidden)
 ## 8. LSTM 구조 초간단 설명
 
 - LSTM은 **기억을 오래 유지할 수 있는 RNN**
+  
 - 내부에 3개의 게이트 사용:
   - **입력 게이트**: 얼마나 기억할지
   - **망각 게이트**: 얼마나 지울지
