--- a/etc/시계열.md
+++ b/etc/시계열.md
@@ -4,6 +4,19 @@
 - 시간 순서대로 정렬된 데이터 (예: 주식 가격, 날씨, 환율 등)
 - 예: 2023-01-01 → 2023-01-02 → 2023-01-03 ...
 
+시계열 데이터란 시간에 대해 순차적으로 관측되는 데이터의 집합을 의미한다. 
+
+일반적인 데이터 분석과정에서 독립변수(independent variable)를 이용해서 종속변수(dependent variable)을 예측하는 방법이 일반적이라면
+
+시계열 데이터 분석은 시간을 독립변수로 활용한다고 이해하면 될것 같다.
+
+- Abrupt Change : 데이터가 가파른 변동을 보이는지
+- Outliers : 다른 값들과 동떨어진 Outlier가 관측되는지
+- Trend : 측정 값이 시간의 흐름 에 따라 증감, 반복을 하는 일정한 Pattern, 경향이 있는지
+- Seasonality : 일, 월, 년, 계절 등 일정 시간에 따라 지속해서 반복되는 Pattern이 있는지
+- Constant Variance : 측정값이 일정한 수준 이내로 변동되는지, 변동이 랜덤하게 발생하는지
+- Long-run Cycle : 오랜 기간 반복되는 Pattern이 있는지
+
 ## 2. 모델링 기본 흐름
 1. **데이터 준비**: 시계열 데이터 로드  
 2. **정상성 확인**: 패턴이 일정한지 확인  
