--- a/etc/로보어드바이저.md
+++ b/etc/로보어드바이저.md
@@ -32,13 +32,13 @@
 
 <br><br><br>
 
-### 용어 설명
+### 용어 
 - **노이즈**: 큰 의미 없이 단기적으로 발생하는 가격의 흔들림
 - **추세 기반**: 장기적인 흐름(상승/하락 추세)에 따라 매매하는 전략
 
 <br><br><br>
 
-### 전략 차이점 요약표
+### 전략 차이점 요약
 
 | 관점           | 전일 변화율 전략                     | 이동 평균 전략                          |
 |----------------|-------------------------------------|----------------------------------------|
@@ -71,7 +71,7 @@
 
 ---
 
-## `diff()`와 `position` 개념
+## `diff()`
 
 ```py
 signal = [0, 0, 1, 1, 0, -1, -1, 0]
