--- a/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
+++ b/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
@@ -71,6 +71,112 @@ risk_aversion 값이 클수록 안정형, 작을수록 공격형
 ---
 
 ## 코드
+수익률 계산: 자산의 수익률을 계산하는 이유는 포트폴리오에서 각 자산이 얼마나 잘 돌아가는지를 파악하기 위해서다. 
+
+이 수익률은 각 자산의 **기대 수익률(expected return)**을 의미하며 자산을 보유함으로써 얻을 수 있는 평균적인 이익을 나타낸다.
+
+분산(Variance): 자산의 분산은 그 자산이 얼마나 불확실하게 움직이는지를 나타낸다. 
+
+즉, 위험을 나타내며 분산이 크면 자산의 수익률이 예측 불가능하고 변동성이 크다는 의미다. 
+
+분산을 최소화하려는 이유는 같은 수익을 얻더라도 더 적은 위험을 감수하고 싶기 때문이다.
+
+평균-분산 최적화는 수익률(평균)을 최대화하면서 동시에 위험(분산)을 최소화하는 포트폴리오를 찾기 위한 방법이다. 
+
+이를 통해 효율적인 포트폴리오를 구성할 수 있다.
+
+
+<br><br>
+
+공분산이 양수이면 두 자산의 수익률이 비슷하게 움직인다는 뜻이고
+
+공분산이 음수이면 두 자산의 수익률이 반대로 움직인다는 뜻이다.
+
+공분산이 0에 가까우면 두 자산의 수익률 변화가 서로 상관이 없다는 뜻
+
+분산은 개별 자산의 변동성을 나타내지만 포트폴리오는 여러 자산으로 구성되기 때문에 자산 간의 상호 관계(공분산)가 매우 중요
+
+<br><br>
+
+```py
+### 데이터 불러오기 함수
+def load_and_clean_data(file_path: str, ticker: str) -> pd.DataFrame:
+    df = pd.read_csv(file_path, parse_dates=['날짜'], index_col="날짜", thousands=",")
+    df['거래량'] = df['거래량'].apply(lambda x: float(x.replace('K', '')) * 1000 if isinstance(x, str) and 'K' in x else float(x))
+    df['변동 %'] = df['변동 %'].apply(lambda x: float(x.replace('%', '')) / 100 if isinstance(x, str) else x)
+    df = df.sort_index().dropna()
+    df = df[['종가']]  # 종가만 남기기
+    df.columns = [ticker]  # 종가 → ticker명
+    return df
+```
+
+```py
+### 수익률 계산 함수
+def calculate_return(price_data: pd.DataFrame) -> pd.DataFrame:
+    return price_data.pct_change(1) * 100  # 일간 수익률
+```
+
+평균-분산 최적화를 수행하여 주어진 수익률 데이터에서 최적의 포트폴리오 비중을 계산
+```py
+### 평균-분산 최적화 함수
+def get_mean_variance_weights(return_data: pd.DataFrame, risk_aversion: int) -> Optional[Dict]:
+
+    ## 각 자산의 기대 수익률을 계산한다. 이때 결측값은 포함하지 않으며 각 자산의 평균 수익률을 구한다. 
+    expected_return = return_data.mean(skipna=False).to_list() #  결측값이 있으면 NaN 반환 
+
+    # 자산 간의 공분산 행렬을 계산한다.
+    # 공분산 행렬은 자산 간의 수익률 변동성 관계를 나타낸다. 이 값이 없으면 최적화가 불가능하므로 None을 반환한다.  
+    cov = return_data.cov(min_periods=len(return_data)) 
+    ## min_periods는 공분산 계산 시 최소 요구되는 데이터 포인트의 수(return_data의 행 수)  
+    ## 공분산을 계산할 때 모든 데이터가 완전해야만 계산을 진행
+
+    if cov.isnull().values.any() or cov.empty:
+        return None
+
+    # PyPortfolioOpt 라이브러리의 EfficientFrontier를 사용하여 평균-분산 최적화 모델을 생성한다.
+    # 이 모델은 주어진 기대 수익률과 공분산 행렬을 바탕으로 최적화 문제를 풀 수 있다.
+    # solver="OSQP"는 최적화 문제를 풀기 위해 OSQP(Operator Splitting Quadratic Program)를 사용하겠다는 의미다. 
+    ef = EfficientFrontier(
+        expected_returns=expected_return,
+        cov_matrix=cov,
+        solver="OSQP"
+    )
+
+
+    # 최적화
+    ef.max_quadratic_utility(risk_aversion=risk_aversion) ## risk_aversion은 위험 회피도
+
+    # 최적화된 포트폴리오 비중을 소수점 형태로 반환. 이때 각 자산의 비중이 정리된 상태로 weights 딕셔너리 형태로 반환
+    weights = dict(ef.clean_weights(rounding=None))
+
+    # 최적화된 포트폴리오 비중(weights)
+    return weights
+```
+```py
+### 데이터 결합 및 실행
+# 각각 데이터 로딩
+steel = load_and_clean_data('미국 철강 코일 선물 과거 데이터.csv', '철강')
+copper = load_and_clean_data('구리 선물 과거 데이터.csv', '구리')
+
+# 날짜 기준 병합 (inner join으로 공통 날짜만)
+merged_prices = pd.concat([steel, copper], axis=1, join="inner")
+
+# 수익률 계산(각 자산의 일간 수익률을 계산하고 결측값을 제거)
+returns = calculate_return(merged_prices).dropna()
+
+# 평균-분산 포트폴리오 최적화
+weights = get_mean_variance_weights(returns, risk_aversion=1)
+## weights는 평균-분산 최적화를 통해 구한 최적 포트폴리오 비중이다.
+## risk_aversion=1은 위험 회피도를 나타내며 이 값에 따라 최적화가 수행
+
+print("최적 포트폴리오 비중:")
+print(weights)
+```
+
+<br><br><br>  
+
+
+
 ```py
 import pandas as pd
 from typing import Optional, Dict
