--- a/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
+++ b/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
@@ -3,6 +3,8 @@
 ## 프로젝트 목적
 - 철강과 구리 선물 데이터를 결합하여, 두 자산 간 분산 효과를 고려한 최적의 투자 비중 도출
 
+<br><br>
+
 ---
 
 ## 이론 개요
@@ -13,6 +15,8 @@
 - **수익은 최대, 리스크(분산)는 최소**가 되도록 포트폴리오 구성
 
 - 단일 종목으로는 공분산 계산이 불가능 → **2개 이상 자산 필요**
+
+<br><br>
 
 ---
 
@@ -27,15 +31,21 @@
 
 - '종가'만 추출 후 자산명으로 컬럼명 변경
 
+<br><br>
+
 ### 2. 가격 데이터 병합
 - 날짜 기준 `concat` (공통 날짜만 유지)
 
 - 컬럼명은 `철강`, `구리`로 구성됨
 
+<br><br>
+
 ### 3. 수익률 계산
 - `pct_change()`로 일일 수익률 계산
 
 - 수익률 단위: **% 기준**
+
+<br><br>
 
 ### 4. 최적화 수행
 - 평균 수익률 (`mean`)
@@ -47,6 +57,8 @@
    - `max_quadratic_utility`: 효용 극대화
 
    - `risk_aversion`: 위험회피 성향 조절 가능
+
+<br><br>
 
 ---
 
@@ -60,6 +72,8 @@ returns = calculate_return(merged).dropna()
 weights = get_mean_variance_weights(returns, risk_aversion=1)
 ```
 
+<br><br>
+
 ## 참고
 risk_aversion 값이 클수록 안정형, 작을수록 공격형
 
@@ -67,13 +81,14 @@ risk_aversion 값이 클수록 안정형, 작을수록 공격형
 
 단기 수익률만 반영되므로 장기 흐름은 별도 분석 필요
 
+<br><br>
 
 ---
 
 ## 코드
 수익률 계산: 자산의 수익률을 계산하는 이유는 포트폴리오에서 각 자산이 얼마나 잘 돌아가는지를 파악하기 위해서다. 
 
-이 수익률은 각 자산의 **기대 수익률(expected return)**을 의미하며 자산을 보유함으로써 얻을 수 있는 평균적인 이익을 나타낸다.
+이 수익률은 각 자산의 기대 수익률(expected return)을 의미하며 자산을 보유함으로써 얻을 수 있는 평균적인 이익을 나타낸다.
 
 분산(Variance): 자산의 분산은 그 자산이 얼마나 불확실하게 움직이는지를 나타낸다. 
 
