--- a/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
+++ b/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
@@ -145,7 +145,8 @@ def get_mean_variance_weights(return_data: pd.DataFrame, risk_aversion: int) -> 
     expected_return = return_data.mean(skipna=False).to_list() #  결측값이 있으면 NaN 반환 
 
     # 자산 간의 공분산 행렬을 계산한다.
-    # 공분산 행렬은 자산 간의 수익률 변동성 관계를 나타낸다. 이 값이 없으면 최적화가 불가능하므로 None을 반환한다.  
+    # 공분산 행렬은 자산 간의 수익률 변동성 관계를 나타낸다.
+    # 이 값이 없으면 최적화가 불가능하므로 None을 반환한다.  
     cov = return_data.cov(min_periods=len(return_data)) 
     ## min_periods는 공분산 계산 시 최소 요구되는 데이터 포인트의 수(return_data의 행 수)  
     ## 공분산을 계산할 때 모든 데이터가 완전해야만 계산을 진행
