--- a/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
+++ b/work_설명/Robo-Advisor/평균-분산 포트폴리오 최적화.md
@@ -1,4 +1,33 @@
 # 평균-분산 포트폴리오 최적화 (PyPortfolioOpt 활용)
+*투자 위험은 최소화하고 수익률은 최대화하는 투자 전략 : 평균-분산 모델을 이용해서 효율적인 포트폴리오를 만드는 전략
+
+투자의 수익률과 위험을 최적화하는 포트폴리오를 구성하기 위한 모델 
+
+<br><br>
+
+- 평균 : 수익률의 평균은 투자자가 포트폴리오에서 얻을 것으로 예상되는 평균적인 수익
+
+    투자자가 투자에서 얼마나 많은 수익을 기대할 수 있는지를 나타내는 척도
+  
+- 분산 : 투자의 위험성을 측정. 분산이 클수록 투자의 변동성이 크도 위험도 커진다. 
+
+<br><br>
+
+- 파라미터 추정 : 모델을 실행할 때 마다 모델의 입력 파라미터를 계산하는 과정
+
+- 변동성 평가 : 최근의 가격 변동성 지표(표준편차, ATR:Average True Range) 검토 
+- rebalancing : 포트폴리오를 일정 기간 보유하고 난 후 달라진 자산의 가치에 맞춰 포트폴리오를 새롭게 구성하는 과정
+- 포트폴리오 최적화 - PyPortfolioOpt - 파이썬으로 구현된 포트폴리오 최적화를 위한 오픈 소스 라이브러리
+- 거래일 달력 - exchange_calendars - 다양한 금융 거래소 및 시장에 대한 거래 관련 정보 제공
+- 주식 정보 스크랩핑 - pykrx - 주가 정보를 스크래핑 하는 파이썬 라이브러리
+- 다차원 배열 - numpy
+- 과학/공학 계산 - scipy
+- DataFrame - pandas
+- 딥러닝 프레임워크 - PyTorch
+- 머신러닝 - scikit_learn 
+- (유틸리티) 인터랙티브 시각화 - tqdm : 반복문이나 작업의 진행 상황을 시각적으로 표시하고 사용자에게 진행 중인 작업에 대한 정보를 제공 
+
+<br><br>
 
 ## 프로젝트 목적
 - 철강과 구리 선물 데이터를 결합하여, 두 자산 간 분산 효과를 고려한 최적의 투자 비중 도출
