--- a/etc/시계열.md
+++ b/etc/시계열.md
@@ -1,311 +1,273 @@
-# 시계열 머신러닝·딥러닝 모델링 정리 
+# 📊 시계열 예측 
+- ARIMA (통계 기반)
+- LSTM (딥러닝 기반)
+- GRU (딥러닝 기반)
+- Transformer (최신 딥러닝 기반)
 
-## 1. 시계열 데이터란?
-- 시간 순서대로 정렬된 데이터 (예: 주식 가격, 날씨, 환율 등)
-- 예: 2023-01-01 → 2023-01-02 → 2023-01-03 ...
+---
 
-<br><br>
+## 1. 시계열이란?
 
-시계열 데이터란 시간에 대해 순차적으로 관측되는 데이터의 집합을 의미한다. 
+시계열은 **시간의 흐름에 따라 수집된 데이터**다.  
 
-일반적인 데이터 분석과정에서 독립변수(independent variable)를 이용해서 종속변수(dependent variable)을 예측하는 방법이 일반적이라면
+예: 주가, 기온, 환율, 방문자 수 등
 
-시계열 데이터 분석은 시간을 독립변수로 활용한다고 이해하면 될것 같다.
+- 시간 순서가 중요
+  
+- 미래를 예측하려면 **과거의 패턴**을 잘 파악해야 한다.
 
-<br><br>
+---
 
-- Abrupt Change : 데이터가 가파른 변동을 보이는지
-- Outliers : 다른 값들과 동떨어진 Outlier가 관측되는지
-- Trend : 측정 값이 시간의 흐름 에 따라 증감, 반복을 하는 일정한 Pattern, 경향이 있는지
-- Seasonality : 일, 월, 년, 계절 등 일정 시간에 따라 지속해서 반복되는 Pattern이 있는지
-- Constant Variance : 측정값이 일정한 수준 이내로 변동되는지, 변동이 랜덤하게 발생하는지
-- Long-run Cycle : 오랜 기간 반복되는 Pattern이 있는지
+## 2. 시계열 데이터에서 검토할 사항
 
-<br><br><br>
+| 항목 | 설명 |
+|------|------|
+| Trend | 시간에 따라 점점 증가하거나 감소하는 경향 |
+| Seasonality | 계절, 요일 등 특정 주기로 반복되는 패턴 |
+| Abrupt Change | 갑작스럽고 급격한 변화 |
+| Outlier | 다른 값들과 동떨어진 이상치 |
+| Constant Variance | 시간에 따라 변동폭이 일정한가? |
+| Long-run Cycle | 장기적으로 반복되는 패턴 |
+| ACF / PACF | 자기상관성 및 지연된 자기상관성 확인 (모델 파라미터 결정에 사용) |
 
-## 2. 모델링 기본 흐름
+---
+
+## 3. 모델링 기본 흐름
+
 1. **데이터 준비**: 시계열 데이터 로드  
-2. **정상성 확인**: 패턴이 일정한지 확인  
+2. **정상성 확인**: 평균과 분산이 일정한지 확인  
 3. **전처리**: 로그 변환, 차분 등  
-4. **데이터 분할**: 훈련/검증/테스트  
-5. **모델 학습**: ARIMA, MLP, RNN, LSTM 등  
-6. **평가**: MAE, MSE, RMSE 등  
+4. **데이터 분할**: 훈련/검증/테스트 나누기  
+5. **모델 학습**: ARIMA, LSTM, GRU, Transformer 등  
+6. **모델 평가**: MAE, RMSE 등 사용  
 7. **미래 예측**: 향후 데이터 예측  
 
-<br><br><br>
-
 ---
 
-## 3. 기본 개념 정리
-
-### 정상성 (Stationarity)
-- 평균, 분산이 일정한 데이터
-- 예측 모델에 꼭 필요
-
-<br><br>
-
-#### 시계열 모델에서 정상성을 검토해야 하는 모델
-정상성 (Stationarity) 은 시계열 데이터에서 시간에 따른 평균과 분산이 일정해야 하는 성질을 말한다. 
-
-정상성 검정과 이를 위한 변환(차분 등)은 주로 전통적인 시계열 모델에서 중요한 과정이다. 
-
-즉, ARIMA 외에도 몇몇 다른 모델에서도 정상성 검정을 해야 할 필요가 있다.
-
-ARIMA 외에 정상성을 고려해야 하는 모델들:
-
-- ARIMA (AutoRegressive Integrated Moving Average):
-
-정상성을 반드시 확보해야 한다. 
-
-데이터가 정상적이지 않으면 차분(differencing)이나 변환을 통해 정상성을 확보한 뒤 모델을 적용한다.
-
-- SARIMA (Seasonal ARIMA):
-
-ARIMA의 계절성 버전인 SARIMA 모델 역시 정상성을 요구합니다. 계절성 변동이 있는 데이터를 처리할 때 주로 사용된다. 
-
-역시 정상성 검정 후 차분 등을 적용해야 한다.
-
-- Exponential Smoothing (ETS):
-
-Exponential Smoothing 계열 모델은 정상성 여부를 반드시 확인해야 하며 정상적이지 않은 데이터를 변환하여 적용하는 경우가 많다.
-
-Holt-Winters 모델은 추세와 계절성을 고려하여 예측을 진행한다. 
-
-정상성 요구가 있을 수 있지만 다소 유연하게 적용 가능하기도 한다.
-
-- ARCH/GARCH:
-
-ARCH (Autoregressive Conditional Heteroskedasticity)나 GARCH (Generalized ARCH) 모델은 
-
-변동성 모델로 금융 시계열에서 자주 사용된다. 
-
-이 모델들도 정상성 검토가 필요하며 특히 이동 평균이나 자기 회귀 요소가 포함되어 있기 때문에 시계열이 정상성을 가질 때 더 잘 동작한다.
-
-<br><br>
-
-정상성 검정을 해야 하는 이유:
-
-이 모델들은 자기회귀(AR) 및 이동평균(MA)를 기반으로 하여 과거 데이터에서 패턴을 추출하려 하기 때문에 
-
-시계열 데이터가 정상성을 갖추지 않으면 예측 성능이 저하될 수 있다.
-
-<br><br>
-
-- 정상성 검정이 필요 없는 모델들 (딥러닝 모델)
-  
-딥러닝 모델들은 정상성 검정에 대한 요구가 없다. 
-
-딥러닝 모델들은 시계열 데이터의 패턴을 학습하면서 비정상적인 시계열 데이터에서도 좋은 예측 성능을 발휘할 수 있다. 
-
-예를 들어 Transformer, LSTM, GRU와 같은 딥러닝 모델들은 정상성 검정 없이도 데이터를 그대로 입력받아 시간적 패턴을 학습할 수 있다.
-
-- LSTM (Long Short-Term Memory):
-
-LSTM은 시계열 데이터에서 장기 의존성을 학습하는 모델로 정상성 검증이 필요 없다.
-
-- GRU (Gated Recurrent Unit):
-
-GRU도 시계열 데이터의 패턴을 학습할 수 있으며 정상성을 고려할 필요가 없다.
-
-- Transformer:
-
-Transformer 모델은 주의(attention) 메커니즘을 사용하여 데이터를 처리하는 딥러닝 모델로 시계열 데이터의 순서와 관계성을 학습한다. 
-
-이 역시 정상성 검증이 필요하지 않다.
-
-이러한 딥러닝 모델들은 학습 과정에서 시계열의 패턴을 자동으로 인식하고 예측을 수행할 수 있기 때문에 
-
-전통적인 모델들과 달리 데이터가 정상성을 만족하지 않아도 잘 작동한다.
-
-<br><br>
-
-정상성 검정이 필요한 모델: ARIMA, SARIMA, Exponential Smoothing, ARCH/GARCH 등 전통적인 시계열 모델.
-
-정상성 검정이 필요 없는 모델: LSTM, GRU, Transformer 등 딥러닝 시계열 모델
-
-<br><br><br>
-
-### 로그 수익률 (Log Return)
-```python
-log_return = log(today_price / yesterday_price)
-```
-- 시계열 데이터를 안정적으로 만들어 줌
-
-<br><br><br>
-
-### 차분 (Differencing)
-```python
-차분 = 오늘 값 - 어제 값
-```
-- 추세를 없애서 정상성을 만들기 위한 방법
-
-<br><br><br>
-
----
-
-## 4. 주요 모델
-
-| 모델 | 특징 | 설명 |
-|------|------|------|
-| ARIMA | 통계 기반 | p(자기회귀), d(차분), q(이동 평균) 사용 |
-| SVR | 머신러닝 | 서포트 벡터로 예측 (과거 데이터를 평면으로 예측) |
-| Linear Regression | 간단한 선형 모델 | 시계열 데이터에 직선 피팅 |
-| MLP | 다층 퍼셉트론 | 과거 데이터를 받아 여러 층으로 예측 |
-| RNN | 순환 신경망 | 시간 흐름을 기억하며 예측 |
-| LSTM | 장기 기억 RNN | RNN보다 먼 과거도 기억 가능 |
-| GRU | LSTM보다 간단 | 성능 비슷하지만 빠름 |
-
-<br><br><br>
-
----
-
-## 5. 평가 지표
-
-| 지표 | 계산법 | 의미 |
-|------|--------|------|
-| MAE | 평균 절댓값 오차 | 예측이 실제값에서 얼마나 떨어졌는지 |
-| MSE | 평균 제곱 오차 | 큰 오차에 더 민감함 |
-| RMSE | MSE의 루트 | 단위가 원래 데이터와 같음 |
-
-<br><br><br>
-
----
-
-## 6. PyTorch 기반 모델 구성
-
-### 입력 구조 이해
-- 입력: `[배치크기, 시퀀스길이, 입력특성수]`  
-  예: `[64, 7, 1]` → 7일간 1개 값씩 64개 데이터
-
-### MLP
-```python
-self.model = nn.Sequential(
-    nn.Linear(input_size, hidden_size),
-    nn.ReLU(),
-    nn.Linear(hidden_size, output_size)
-)
-```
-<br><br>
-
-### RNN
-```python
-self.rnn = nn.RNN(input_size, hidden_size, batch_first=True)
-self.fc = nn.Linear(hidden_size, output_size)
-```
-
-<br><br>
-
-### LSTM
-```python
-self.lstm = nn.LSTM(input_size, hidden_size, batch_first=True)
-self.fc = nn.Linear(hidden_size, output_size)
-```
-
-<br><br><br>
-
----
-
-## 7. RNN 구조 초간단 설명
-
-- RNN은 **순서가 있는 데이터**(시계열)를 다루는 데 특화
-  
-- 예측할 때, 이전 입력과 **은닉 상태(hidden state)** 를 같이 사용함
-
-```python
-out, hidden = rnn(x, hidden)
-```
-
-- `x`: 현재 입력  
-- `hidden`: 이전 기억  
-- `out`: 현재 결과  
-- `hidden`: 다음으로 넘길 기억  
-
-<br><br><br>
-
----
-
-## 8. LSTM 구조 초간단 설명
-
-- LSTM은 **기억을 오래 유지할 수 있는 RNN**
-  
-- 내부에 3개의 게이트 사용:
-  - **입력 게이트**: 얼마나 기억할지
-  - **망각 게이트**: 얼마나 지울지
-  - **출력 게이트**: 어떤 값을 출력할지
-
-<br><br><br>
-
----
-
-## 9. 실제 모델 학습 흐름 예시
-
-```python
-for epoch in range(epochs):
-    model.train()
-    for X_batch, y_batch in train_loader:
-        output = model(X_batch)
-        loss = criterion(output, y_batch)
-        loss.backward()
-        optimizer.step()
-        optimizer.zero_grad()
-```
-
-<br><br><br>
-
----
-
-## 10. 예측 결과 복원 방법
-
-> 로그 수익률로 학습했을 경우, 원래 **종가로 복원**하려면 다음과 같이 함:
-
-```python
-predicted_price = [start_price]
-for log_return in predicted_log_returns:
-    next_price = predicted_price[-1] * np.exp(log_return)
-    predicted_price.append(next_price)
-```
-
-<br><br><br>
-
----
-
-## 11. ACF / PACF 간단 설명
-
-- **ACF**: 자기 자신과의 상관관계 (전체)
-- **PACF**: 직접적인 상관관계만 고려
-
-| ACF | PACF | 의미 |
-|-----|------|------|
-| 천천히 감소 | 뚝 끊김 | AR 모델 (자기회귀) |
-| 뚝 끊김 | 천천히 감소 | MA 모델 (이동 평균) |
-| 둘 다 천천히 감소 |  | 비정상 시계열일 수 있음 |
-
-<br><br><br>
-
----
-
-## 12. 추천 학습 순서
-
-1. 시계열 개념 이해 (정상성, 차분, 로그)  
-2. ARIMA 구조 이해  
-3. 머신러닝 회귀 (SVR, LinearRegression)  
-4. 딥러닝 기본 (MLP → RNN → LSTM)  
-5. 입력 구조 / 예측 결과 복원 연습  
-6. 성능 비교 / 시각화  
-
-<br><br><br>
-
----
-
-## 13. 용어 정리
+## 4. 주요 용어 정리
 
 | 용어 | 설명 |
 |------|------|
-| 배치(batch) | 여러 데이터를 한 번에 학습시키는 단위 |
-| 시퀀스 길이 | 예측에 사용하는 과거 일수 |
-| 입력 특성 수 | 예: 종가만 있으면 1, 종가+거래량이면 2 |
-| hidden state | RNN이 기억하는 상태 |
-| epoch | 전체 데이터를 몇 번 반복 학습할지 |
-| loss | 예측이 얼마나 틀렸는지를 나타내는 수치 |
+| 시계열(Time Series) | 시간 순서대로 정리된 데이터 |
+| 예측(Prediction) | 미래 값을 미리 맞추는 것 |
+| 정상성(Stationarity) | 평균, 분산이 일정한 상태 |
+| 차분(Differencing) | 오늘 - 어제처럼 변화량을 보는 것 |
+| ACF | 과거 값과 얼마나 연관 있는지 (자기상관) |
+| PACF | 중간 영향 제거 후 순수한 자기상관 |
+| MAE | 예측 오차의 평균 |
+| 로그 수익률 | log를 사용한 비율 변화 측정 방식 |
 
 ---
+
+## 5. 정상성 검정이 필요한 모델들
+
+| 모델 | 정상성 필요 여부 | 설명 |
+|------|------------------|------|
+| ARIMA | ✅ 반드시 필요 | 비정상일 경우 차분 필요 |
+| SARIMA | ✅ 필요 | 계절성 포함된 ARIMA |
+| VAR | ✅ 필요 | 여러 시계열을 함께 분석하는 모델 |
+| LSTM, GRU, Transformer | ❌ 필요 없음 | 딥러닝 기반이므로 비정상성도 학습 가능 |
+
+---
+
+## 6. 모델 비교표
+
+| 모델 | 특징 | 장점 | 단점 |
+|------|------|------|------|
+| ARIMA | 수학 기반 통계 모델 | 빠르고 해석 쉬움 | 복잡한 패턴 약함 |
+| LSTM | 딥러닝 모델 | 장기 기억 가능 | 느린 학습 |
+| GRU | 단순화된 LSTM | 빠른 학습 | 복잡한 기억력 부족 |
+| Transformer | 전체 데이터 한 번에 처리 | 병렬 처리, 고성능 | 데이터 많이 필요 |
+
+---
+
+## 7. 실습 예시
+
+### ARIMA 실습
+
+```py
+import pandas as pd
+from statsmodels.tsa.arima.model import ARIMA
+import matplotlib.pyplot as plt
+from sklearn.metrics import mean_absolute_error
+
+df = pd.read_csv('https://raw.githubusercontent.com/jbrownlee/Datasets/master/daily-min-temperatures.csv')
+df['Date'] = pd.to_datetime(df['Date'])
+df.set_index('Date', inplace=True)
+data = df['Temp']
+
+train = data[:-7]
+test = data[-7:]
+
+model = ARIMA(train, order=(5,1,0))
+model_fit = model.fit()
+forecast = model_fit.forecast(steps=7)
+
+mae = mean_absolute_error(test, forecast)
+
+plt.plot(test.index, test, label='Actual')
+plt.plot(test.index, forecast, label='Predicted')
+plt.title(f'ARIMA Forecast (MAE: {mae:.2f})')
+plt.legend()
+plt.show()
+```
+
+---
+
+## LSTM 실습 (PyTorch)
+```py
+import torch
+import torch.nn as nn
+import numpy as np
+import pandas as pd
+from sklearn.preprocessing import MinMaxScaler
+import matplotlib.pyplot as plt
+
+df = pd.read_csv('https://raw.githubusercontent.com/jbrownlee/Datasets/master/daily-min-temperatures.csv')
+data = df['Temp'].values.reshape(-1, 1)
+
+scaler = MinMaxScaler()
+data = scaler.fit_transform(data)
+
+def create_sequences(data, seq_length):
+    x, y = [], []
+    for i in range(len(data)-seq_length):
+        x.append(data[i:i+seq_length])
+        y.append(data[i+seq_length])
+    return torch.FloatTensor(x), torch.FloatTensor(y)
+
+seq_length = 7
+x, y = create_sequences(data, seq_length)
+
+class LSTMModel(nn.Module):
+    def __init__(self):
+        super().__init__()
+        self.lstm = nn.LSTM(1, 64, batch_first=True)
+        self.fc = nn.Linear(64, 1)
+
+    def forward(self, x):
+        out, _ = self.lstm(x)
+        return self.fc(out[:, -1, :])
+
+model = LSTMModel()
+criterion = nn.MSELoss()
+optimizer = torch.optim.Adam(model.parameters(), lr=0.01)
+
+for epoch in range(100):
+    output = model(x.unsqueeze(-1))
+    loss = criterion(output, y)
+    optimizer.zero_grad()
+    loss.backward()
+    optimizer.step()
+
+pred = model(x.unsqueeze(-1)).detach().numpy()
+pred = scaler.inverse_transform(pred)
+true = scaler.inverse_transform(y.numpy().reshape(-1, 1))
+
+plt.plot(true[-50:], label='Actual')
+plt.plot(pred[-50:], label='Predicted')
+plt.title('LSTM 예측 결과')
+plt.legend()
+plt.show()
+```
+
+---
+
+## 9. GRU 실습 (PyTorch)
+```py
+class GRUModel(nn.Module):
+    def __init__(self):
+        super().__init__()
+        self.gru = nn.GRU(1, 64, batch_first=True)
+        self.fc = nn.Linear(64, 1)
+
+    def forward(self, x):
+        out, _ = self.gru(x)
+        return self.fc(out[:, -1, :])
+
+model = GRUModel()
+criterion = nn.MSELoss()
+optimizer = torch.optim.Adam(model.parameters(), lr=0.01)
+
+for epoch in range(100):
+    output = model(x.unsqueeze(-1))
+    loss = criterion(output, y)
+    optimizer.zero_grad()
+    loss.backward()
+    optimizer.step()
+
+pred = model(x.unsqueeze(-1)).detach().numpy()
+pred = scaler.inverse_transform(pred)
+true = scaler.inverse_transform(y.numpy().reshape(-1, 1))
+
+plt.plot(true[-50:], label='Actual')
+plt.plot(pred[-50:], label='Predicted')
+plt.title('GRU 예측 결과')
+plt.legend()
+plt.show()
+```
+
+---
+
+## 10. Transformer 실습 (PyTorch)
+```py
+import torch.nn.functional as F
+
+class TransformerModel(nn.Module):
+    def __init__(self, seq_length):
+        super().__init__()
+        self.pos_embedding = nn.Parameter(torch.randn(1, seq_length, 64))
+        self.input_linear = nn.Linear(1, 64)
+        self.transformer = nn.TransformerEncoder(
+            nn.TransformerEncoderLayer(d_model=64, nhead=8),
+            num_layers=2
+        )
+        self.fc = nn.Linear(64, 1)
+
+    def forward(self, x):
+        x = self.input_linear(x)
+        x = x + self.pos_embedding
+        x = self.transformer(x)
+        return self.fc(x[:, -1, :])
+
+model = TransformerModel(seq_length)
+criterion = nn.MSELoss()
+optimizer = torch.optim.Adam(model.parameters(), lr=0.001)
+
+for epoch in range(100):
+    output = model(x.unsqueeze(-1))
+    loss = criterion(output, y)
+    optimizer.zero_grad()
+    loss.backward()
+    optimizer.step()
+
+pred = model(x.unsqueeze(-1)).detach().numpy()
+pred = scaler.inverse_transform(pred)
+true = scaler.inverse_transform(y.numpy().reshape(-1, 1))
+
+plt.plot(true[-50:], label='Actual')
+plt.plot(pred[-50:], label='Predicted')
+plt.title('Transformer 예측 결과')
+plt.legend()
+plt.show()
+```
+
+---
+
+## 요약 
+
+| 모델 | 해석 쉬움 | 복잡한 패턴 학습 | 학습 속도 | 데이터 필요량 |
+| --- | --- | --- | --- | --- |
+| ARIMA | ✅ | ❌ | ✅ | ❌ |
+| LSTM | ❌ | ✅ | ❌ | ✅ |
+| GRU | ❌ | ✅ | ✅ | ✅ |
+| Transformer | ❌ | ✅✅ | ✅✅ | ✅✅ |
+
+ARIMA → 시계열 기본 개념, 통계
+
+LSTM → 딥러닝 기본
+
+GRU → LSTM보다 빠르게 학습
+
+Transformer → 최신 기술 응용
+
