--- a/work/2025-04/kaggle/.md
+++ b/work/2025-04/kaggle/.md
@@ -3,19 +3,40 @@ from tensorflow.keras.models import Sequential
 from tensorflow.keras.layers import Dense, Dropout, LSTM, GRU
 from sklearn.preprocessing import MinMaxScaler
 
-train = df.loc[:, ["Open"]].values  # 종가 대신 시가(Open)를 사용함
-scaler = MinMaxScaler(feature_range=(0, 1))  # 정규화
-train_scaled = scaler.fit_transform(train)  # 0~1로 스케일링
+train = df.loc[:, ["Open"]].values  # 종가 대신 시가(Open)만 뽑아서 numpy 배열로 변환
+scaler = MinMaxScaler(feature_range=(0, 1))  # 정규화(데이터를 0~1 범위로 바꾸기 위해 MinMaxScaler를 설정)
+train_scaled = scaler.fit_transform(train)  # 0~1로 스케일링(데이터를 학습시킬 수 있도록 정규화(스케일링))
+```
 
+```py
 # 타임스텝 데이터셋 생성 함수
-def create_timesteps(ts=50):
-    X_train, y_train = [], []
-    for i in range(ts, 1258):
-        X_train.append(train_scaled[i-ts:i, 0])  # 과거 ts개의 데이터를 X로
+def create_timesteps(ts=50): # ts: 타임스텝 → 과거 50일 사용
+    X_train, y_train = [], []  # 입력(X), 출력(y) 배열 초기화
+    for i in range(ts, 1258):  # 50번째 ~ 1257번째까지 반복 (총 1258개 데이터 기준)
+        X_train.append(train_scaled[i-ts:i, 0])  # 과거 ts개의 데이터를 X로(과거 50일간 데이터를 X로)
         y_train.append(train_scaled[i, 0])       # 바로 다음 시점을 y로
+
     X_train = np.array(X_train).reshape(-1, ts, 1)  # (샘플 수, 타임스텝, 1)
     return X_train, np.array(y_train), ts
 ```
+- i가 100이라고 하면, X_train에는 50~99번 데이터가 들어가고
+
+    y_train에는 100번 데이터(=다음 날 시가)가 들어간다.
+
+- 이런 방식으로 과거 데이터를 입력으로 다음 날 데이터를 출력으로 만들어 학습용 데이터셋을 구성한다.
+
+reshape(-1, ts, 1) 설명
+reshape은 데이터의 모양을 바꾸는 것입니다.
+
+-1: 샘플 수 (자동으로 계산됨. 예: 몇 개 만들지 몰라도 자동 계산)
+
+ts: 한 샘플당 몇 개의 시간 데이터를 가지고 있는지 (예: 과거 50일)
+
+1: 특성 수 (여기서는 시가 하나만 쓰니까 1개)
+
+즉, 모양은 (샘플 수, 50, 1)이 된다. 
+
+<br>
 
 ### 1) RNN 모델
 ```py
@@ -71,46 +92,120 @@ model_gru_ts.fit(X_train, y_train, epochs=100)
 - 특징: return_sequences=True로 중간층 출력 유지 → 시계열 길이 유지
 
 
+<br><br>
+
+(추가 분석)
+
+RNN이 세 가지 모델 중에서 가장 좋은 성능을 보였기 때문에
+
+RNN 모델을 최종 선택해서 시각화와 예측 결과 분석을 진행한 코드
+
+학습 데이터 전체에 대해 예측 → 시각화, MAE, MSE 출력해서 수치적으로 평가
+
+```py
+import matplotlib.pyplot as plt
+
+# 학습 데이터의 마지막 50일을 기준으로 예측용 데이터 준비
+input_data = train_scaled[-50:].reshape(1, 50, 1)  # (1개 샘플, 50일, 1개 특성)
+
+# 예측 (정규화된 값)
+pred_scaled = modelRNN.predict(input_data)
+
+# 정규화 복원
+predicted_price = scaler.inverse_transform(pred_scaled)
+
+print("예측한 다음 날 시가:", predicted_price[0][0])
+```
+
+```py
+# 학습 데이터 전체에 대해 예측
+train_predict = modelRNN.predict(X_train)
+
+# 정규화 복원
+train_predict_original = scaler.inverse_transform(train_predict.reshape(-1, 1))
+y_train_original = scaler.inverse_transform(y_train.reshape(-1, 1))
+
+# 시각화
+plt.figure(figsize=(12, 6))
+plt.plot(y_train_original, label="실제 시가")
+plt.plot(train_predict_original, label="예측 시가")
+plt.legend()
+plt.title("실제 시가 vs 예측 시가")
+plt.xlabel("시간")
+plt.ylabel("시가")
+plt.show()
+```
+
+```py
+from sklearn.metrics import mean_absolute_error, mean_squared_error
+
+mae = mean_absolute_error(y_train_original, train_predict_original)
+mse = mean_squared_error(y_train_original, train_predict_original)
+
+print("MAE:", mae)
+print("MSE:", mse)
+```
+
 ---
 
 
 ```py
 df_train = pd.read_csv(...)
+
+ # 'Close' 컬럼에서 쉼표 제거 → 문자열을 숫자(float)로 변환
 df_closing = df_train['Close'].apply(lambda x : x.replace(',', '')).astype('float')
+
+# 0~1 사이로 정규화할 스케일러 생성
 scaler = MinMaxScaler(feature_range=(0,1))
+
+# 종가 데이터를 (n, 1) 형태로 reshape → 정규화 진행
 df_closing = scaler.fit_transform(df_closing.values.reshape(-1, 1))
 
 # 시퀀스 만들기
 def create_dataset(dataset, time_step=1):
-    x_data, y_data = [], []
-    for i in range(len(dataset)-time_step-1):
-        x_data.append(dataset[i:(i+time_step), 0])
-        y_data.append(dataset[i + time_step, 0])
-    return np.array(x_data), np.array(y_data)
+    x_data, y_data = [], []  # 입력 시퀀스와 정답 리스트 초기화
+    for i in range(len(dataset)-time_step-1):  # 전체 길이에서 타임스텝만큼 슬라이딩
+        x_data.append(dataset[i:(i+time_step), 0])  # 과거 time_step개 데이터를 입력으로 저장
+        y_data.append(dataset[i + time_step, 0])    # 다음 값을 정답으로 저장
+    return np.array(x_data), np.array(y_data)  # 넘파이 배열로 반환
 
 # 65% 학습, 35% 테스트로 나눔
 training_size = int(len(df_closing)*0.65)
-train_data = df_closing[:training_size]
-test_data = df_closing[training_size:]
+train_data = df_closing[:training_size]  # 학습 데이터
+test_data = df_closing[training_size:]   # 테스트 데이터
 
-time_step = 100  # 과거 100일 사용
-X_train, y_train = create_dataset(train_data, time_step)
-X_test, ytest = create_dataset(test_data, time_step)
-X_train = X_train.reshape(-1, 100, 1)
+time_step = 100  # 과거 100일 사용(시퀀스 길이를 100으로 지정)  
+X_train, y_train = create_dataset(train_data, time_step)  # 학습 시퀀스 생성
+X_test, ytest = create_dataset(test_data, time_step)      # 테스트 시퀀스 생성
+
+X_train = X_train.reshape(-1, 100, 1)  # (샘플 수, 시퀀스 길이, 1개의 특성)
 X_test = X_test.reshape(-1, 100, 1)
 ```
 
 
 ### 하이퍼파라미터 튜닝 모델 정의
 ```py
-def build_model(hp):
-    model = Sequential()
+def build_model(hp):  # hp: 하이퍼파라미터를 조정할 수 있게 해주는 객체
+    model = Sequential()  # 순차 모델 생성
+
+   # 첫 번째 LSTM 레이어: 유닛 수를 10~100 중 선택, 시퀀스 출력 유지
     model.add(LSTM(units = hp.Choice('layer1_units', [10~100]), return_sequences=True, input_shape=(100,1)))
-    for i in range(hp.Int('num_layers', 2, 15)):                        
+
+    # 두 번째~여러 번째 LSTM 레이어: 층 수를 2~15 사이로 지정
+    for i in range(hp.Int('num_layers', 2, 15)):
+        # 각 층의 유닛 수를 10~150 사이 10단위로 조절        
         model.add(LSTM(units = hp.Int('units'+str(i), 10, 150, step=10), return_sequences=True))
+
+    # 마지막 LSTM 층: 시퀀스 출력하지 않음 (마지막 예측만 출력)
     model.add(LSTM(units = hp.Choice('last_lstm_units', [50, 100, 150])))
+
+    # Dropout: 과적합 방지용, 비율은 0.3~0.7 중 선택
     model.add(Dropout(rate = hp.Choice('rate', [0.3~0.7])))
+
+    # 출력층: 다음 날 가격 1개 예측
     model.add(Dense(1))
+
+    # 손실함수와 옵티마이저 설정
     model.compile(loss='mean_squared_error', optimizer='adam')
     return model
 ```
@@ -121,25 +216,38 @@ def build_model(hp):
 
 ### 튜닝 및 학습 실행
 ```py
+# RandomSearch로 여러 하이퍼파라미터 조합을 테스트
 tuner = RandomSearch(build_model, ...)
+
+# 훈련 데이터를 기반으로 최적 조합 찾기
 tuner.search(X_train, y_train, ...)
+
+# 가장 좋은 모델 1개 선택
 best_model = tuner.get_best_models(1)[0]
+
+# 최적 모델로 학습 수행
 best_model.fit(...)
 ```
 
 ### 예측 및 시각화
 ```py
-train_predict = best_model.predict(X_train)
-test_predict = best_model.predict(X_test)
+train_predict = best_model.predict(X_train)  # 학습 데이터에 대한 예측
+test_predict = best_model.predict(X_test)    # 테스트 데이터에 대한 예측
 
+# 정규화 복원 (0~1 → 원래 값으로)
 train_predict = scaler.inverse_transform(train_predict)
 test_predict = scaler.inverse_transform(test_predict)
 
 # 미래 10일 예측
-future_predictions = test_data.copy()
-for i in range(100):
+future_predictions = test_data.copy()   # 테스트 데이터를 복사 (미래 예측에 활용)
+
+for i in range(100):  # 100일치 예측 반복
+    # 최근 100일 데이터를 입력으로 사용
     next_input = future_predictions[341+i:].reshape(1,100,1)
-    new_prediction = model.predict(next_input)
+
+    new_prediction = model.predict(next_input) # 다음 1일 예측
+
+    # 예측 결과를 뒤에 추가하여 다음 입력으로 사용
     future_predictions = np.append(future_predictions, new_prediction)
 ```
 - 출력: 향후 10일간의 주가 예측
